# lora

./: .gitignore  Chapter_12_Fine_tuning_Generation_Models.ipynb  Korean_LoRA_Finetuning_Colab.ipynb  pyproject.toml
TinyLlama-1.1B-dpo-qlora/: adapter_config.json
TinyLlama-1.1B-qlora/: adapter_config.json
