[project]
name = "lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.31.0",
    "bitsandbytes==0.43.1",
    "peft==0.11.1",
    "sentencepiece==0.2.0",
    "transformers==4.41.2",
    "triton==3.1.0",
    "trl==0.9.4",
]
